--- a/index.html
+++ b/index.html
@@ -4,11 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Static Template</title>
+    <title>Supermercado Aida</title>
+    <link rel="stylesheet" href="css/index.ts" />
+    <link rel="stylesheet" href="css/styles.css"/>
+    
+   
   </head>
   <body>
-    <h1>Hola Mundo</h1>
-    <button id="saludar">Saludar al Usuario</button>
+    <header class="header">
+        <img src="img/bienvenidos.jpeg" alt="" />
+        <h1 class="logo"><a href="índice.html"></h1>
+    </header>
+    <div id="menu">
+      <ul>
+               <li><a href="Home.html">Home</a></li>
+        <li><a href="Comprar.html">Comprar</a></li>
+        <li><a href="Productos.html">Productos</a></li>
+        <li><a href="Contacto.html">Contacto</a></li>
+        <li><a href="Aida online.html">Aida online</a></li>
+        <li><a href="Limpieza.html">Limpieza</a></li>
+        <li><a href="Perfumería.html">Perfumería</a></li>
+        <li><a href="Fiambrería.html">Fiambrería</a></li>
+        <li class="Items-r">
+          <a href="Verdulería.html">Verdulería</a>
+        </li>
+      </ul>
+    </div>
+  <div class="comprar"> <section id="comprar" class="py-3o">
+    <h2>Productos Destacados</h2>
+    <button id="productos">Ingrese a Nuestros Productos</button>
+    <div>
+        <h1>Supermercado Aida</h1>
+        <h2>¡¡La mejor opción!!!</h2>
+        <h3>¡¡En precios y Calidad!!</h3>
+  <button><a href="pagina2.html">Ir a la siguiente página</a></button></div>
+   
+    <footer id="pie">Supermercado Aida, 2022, Todos los Derechos Reservados </footer>
     <script src="index.ts"></script>
   </body>
 </html>
