--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
     <div id="menu">
       <ul>
                <li><a href="Home.html">Home</a></li>
-        <li><a href="Comprar.html">Comprar</a></li>
+        <li><a href="Comprar.html">Comprar</a><ul><li><a href="Comprar.html">Dulce de Leche</li><li>Ginebra Bols</li></ul></li>
         <li><a href="Productos.html">Productos</a></li>
         <li><a href="Contacto.html">Contacto</a></li>
         <li><a href="Aida online.html">Aida online</a></li>
-        <li><a href="Limpieza.html">Limpieza</a></li>
-        <li><a href="Perfumería.html">Perfumería</a></li>
-        <li><a href="Fiambrería.html">Fiambrería</a></li>
+        <li><a href="Ingresá tu Correo.html">Ingresá tu Correo</a></li>
+        <li><a href="Subscribirme.html">Subscribirme</a></li>
+        <li><a href="Servicios.html">Servicios</a></li>
         <li class="Items-r">
-          <a href="Verdulería.html">Verdulería</a>
-        </li>
+          <a href="Atención al Cliente.html">Atención al cliente
       </ul>
     </div>
   <div class="comprar"> <section id="comprar" class="py-3o">
